crates/air/tests/integration/snapshots/integration__help__format_help-2.snap
---
source: crates/air/tests/integration/help.rs
expression: "Command::new(binary_path()).arg(\"format\").arg(\"--help\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
Format a set of files or directories

Usage: air format [OPTIONS] [PATHS]...

Arguments:
  [PATHS]...  The files or directories to format

Options:
      --check
          If enabled, format results are not written back to the file. Instead, exit with a non-zero
          status code if any files would have been modified, and zero otherwise
      --force
          Force formatting to occur regardless of exclusion patterns. This applies recursively to
          directories. This serves as an escape hatch for cases like `air format r-code.txt
          --force`, but is very rarely needed
      --no-configuration
          Format with Air's default settings without discovering a project or user configuration
          file
      --stdin-file-path <STDIN_FILE_PATH>
          Use this option to enable reading from stdin and writing to stdout. This specifies a file
          path to associate the standard input with, which is used as the location to begin
          searching for configuration files from. The file does not have to exist and will not be
          read from. If a relative path is provided, it is resolved from the current working
          directory. If this option is specified, no other files or directories can be provided
  -h, --help
          Print help

Global options:
      --log-level <LOG_LEVEL>  The log level [default: warn] [possible values: error, warn, info,
                               debug, trace]
      --no-color               Disable colored output. To turn colored output off, either set this
                               option or set the environment variable `NO_COLOR` to any non-zero
                               value

----- stderr -----

----- args -----
format --help
