crates/air/tests/integration/snapshots/integration__help__help.snap
---
source: crates/air/tests/integration/help.rs
assertion_line: 8
expression: "&mut Command::new(binary_path()).run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Air: An R language server and formatter

Usage: air [OPTIONS] <COMMAND>

Commands:
  completion       Generate shell completion scripts
  format           Format a set of files or directories
  language-server  Start a language server
  help             Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global options:
      --log-level <LOG_LEVEL>  The log level. One of: `error`, `warn`, `info`, `debug`, or `trace`.
                               Defaults to `warn`
      --no-color               Disable colored output. To turn colored output off, either set this
                               option or set the environment variable `NO_COLOR` to any non-zero
                               value

For help with a specific command, see: `air help <command>`.

----- args -----
